--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   },
-  "homepage": "https://beesbridge.us/"
+  "homepage": "https://www.beesbridge.us/"
 }
